[package]
name = "zeevonk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.29"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
