[package]
name = "zeevonk"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
futures = { version = "0.3.31", default-features = false }
gdtf = "0.2.0"
lazy_static = "1.5.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.145"
spin_sleep = "1.3.3"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "net", "bytes", "time"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros"] }
