[package]
name = "zeevonk"
version.workspace = true
edition.workspace = true

[features]
default = []
tokio = ["dep:tokio", "dep:tokio-util", "dep:futures"]
client = ["tokio"]
server = ["tokio", "dep:spin_sleep", "dep:gdtf"]

[dependencies]
log.workspace = true

thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
serde-big-array = "0.5.1"

uuid = { version = "1.19.0", features = ["serde", "v4"] }
lazy_static = "1.5.0"

tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "net", "bytes", "time"], optional = true }
tokio-util = { version = "0.7.17", features = ["codec"], optional = true }
futures = { version = "0.3.31", default-features = false, optional = true }

spin_sleep = { version = "1.3.3", optional = true }
gdtf = { version = "0.2.0", optional = true }

[dev-dependencies]
pretty_env_logger = "0.5.0"
tokio = { version = "1.48.0", features = ["macros"] }

[[example]]
name = "processor"
path = "examples/processor.rs"
required-features = ["client"]
